# Infrastructure_TP2_annexes

./: README.md
project/: .gitignore  Makefile  compose.swarm.yml  compose.yml
project/api/: Dockerfile  app.py  pyproject.toml
project/api/tests/: test_main.py
project/api/todo_app/: main.py
project/docs/: ci-cd.md
project/frontend/: Dockerfile  index.html  package.json  script.js
project/ops/: .env.sample
